Version 0.5.2
--------------
Bugfix: X-DNZB-Category was not working on compatible sites.

Version 0.5.1
--------------
Change: Fresh new icon (the smaller 16x16 icon remains the same)
Change: 'Notification Timeout' setting now defaults to 10 seconds (previously defaulted to Disabled).
Bugfix: (Regression) 'Enable Context Menu' option was not working.
Bugfix: (Regression) binsearch.info wasn't working.
Bugfix: Renamed the display options check boxes in settings to mean the reverse of what they meant before (i.e. Keeping them checked actually enables nice display names).
Bugfix: (Regression) 'Pause Queue' popup option was missing.

Version 0.5.0
--------------
Feature: "Send link to SABnzbd" link added to chrome context menu for http links. Note that this feature is not intended to be used on links that will require authentication.
Feature: New setting in options page to enable/disable the new context menu.
Feature: Added support for fanzub
Feature: Completely redesigned Options page
Change: Removed newzleech support since that website is down.
Change: Extreme architecture change that fixes many bugs and improves stability.
Bugfix: Fixed continuous memory leaks happening during refreshes.
Bugfix: SabConnect++ no longer crashes after a period of time.
Bugfix: Several script errors eliminated and stability improved.

Version 0.4.12
--------------
New feature: Added 1-click NZB download for fanzub.com
Improvement: Allow 1, 2 or 4 hours refresh rates, or disabling background refresh altogether
Bugfix: fixing 1-click for nzbclub.com
Bugfix: Missing 1-click downloads on binsearch.info Watchlist
Bugfix: AJAX search results on nzbsrus.com didn't show the 1-click SAB icons

Version 0.4.11
--------------
Bugfix: Now working in Chrome 12 (dev)

Version 0.4.10
--------------
New feature: Added 1-click NZB download for nzb.su (Newznab).
  Note: SABconnect++ won't send a category when using cover view. This is because those views don't display the categories.

Version 0.4.9